--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<nav class="navbar">
 			<div class="max-width">
-				<div class="logo"><a href="#">IAM WEB <b><span>DEV</span></b>ELOPER</a></div>
+				<div class="logo"><a href="#">IAM WEB - <b><span>DEV</span></b></a></div>
 				<ul class="menu">
 					<li><a href="#about">About</a></li>
 					<li><a href="#services">Services</a></li>
